<resources>
    <string name="app_name">Green Wallet</string>
    <string name="btn_begin" />
    <string name="choose_lang">Select your language</string>
    <string name="back">Back</string>
    <string name="create_a_code_password">Create a code - password</string>
    <string name="use_a_passcode_you_won_t_forget">Use a passcode \n you won\'t forget</string>
    <string name="enter_password">Enter password</string>
    <string name="wallet">Wallet</string>
    <string name="receive">Receive</string>
    <string name="send">Send</string>
    <string name="story">Story</string>
    <string name="addresses">Addresses</string>
    <string name="balance">Balance</string>
    <string name="cryptocurrency_rate">Cryptocurrency rate</string>
    <string name="add_wallet">Add wallet</string>
    <string name="new_wallet">New</string>
    <string name="import_mnemonics">Import mnemonics</string>
    <string name="choose_network">Choose network</string>
    <string name="description">Description</string>
    <string name="characteristics">Characteristics</string>
    <string name="create">Create</string>
    <string name="i_agree_with_the_terms_of_use">I accept <font fgcolor="#3AAC59"> <u>the terms of use</u> </font></string>
    <string name="term_of_use_text">This prototype is the intellectual property of Green App Development LLC.\n\nThe use of materials for informational purposes is allowed with a mandatory link to the site of the owner of the product green-app.io\n\nUsed logos of Chia, Chives, USDS, etc. belong to their owners.\n\nIllegal copying of the submitted materials is punishable by law.</string>
    <string name="continue_btn">Continue</string>
    <string name="import_your_wallet">Import your wallet</string>
    <string name="please_enter_a_mnemonic_phrase">Please enter a mnemonic phrase</string>
    <string name="warning_no_one_is_watching_your_screen">!  Make sure no one is looking at your screen</string>
    <string name="enter_pneumonic_phrase">Please enter a mnemonic phrase</string>
    <string name="please_wait">Please, wait…</string>
    <string name="loading">Loading</string>
    <string name="mnemonic_phrase_successfully_n_imported">Mnemonic phrase successfully \n imported</string>
    <string name="imported">Imported!</string>
    <string name="ready">Ready</string>
    <string name="make_sure_no_one_is_looking_at_your_screen">Make sure no one is looking at your screen</string>
    <string name="hide_wallet_balance">Hide wallet balance</string>
    <string name="on_the_main_screen">On the main screen</string>
    <string name="we_will_answer_questions">We will answer questions</string>
    <string name="support">Support</string>
    <string name="more">More</string>
    <string name="add_token">Add token</string>
    <string name="copy">Copy</string>
    <string name="address_wallet">Wallet address: </string>
    <string name="receiving_chia">Receiving the </string>
    <string name="copied">Copied</string>
    <string name="dummy_digits"><font fgcolor="#3AAC59"> <u>0.000123</u> </font></string>
    <string name="add_wallet_import" />
    <string name="add_wallet_new" />
    <string name="add_wallet_title" />
    <string name="address_book_add_adress" />
    <string name="address_book_add_contact_add_btn" />
    <string name="address_book_add_contact_adress" />
    <string name="address_book_add_contact_description" />
    <string name="address_book_add_contact_name" />
    <string name="address_book_add_contact_title" />
    <string name="address_book_edit_contact_description" />
    <string name="address_book_edit_contact_name" />
    <string name="address_book_edit_contact_title" />
    <string name="address_book_pop_up_delete_description" />
    <string name="address_book_pop_up_delete_title">Attention!</string>
    <string name="address_book_title" />
    <string name="address_book_wrong_adress_error" />
    <string name="adress_book_edit_contact_pop_up_changed_description" />
    <string name="adress_book_edit_contact_pop_up_changed_title" />
    <string name="adress_book_loading_remove_description" />
    <string name="adress_book_loading_remove_title" />
    <string name="adress_book_pop_up_removed_description" />
    <string name="adress_book_pop_up_removed_title" />
    <string name="agreement_with_terms_of_use_chekbox" />
    <string name="ask_a_question_e_mail" />
    <string name="ask_a_question_name" />
    <string name="ask_a_question_question" />
    <string name="ask_a_question_title" />
    <string name="back_btn" />
    <string name="confirm_btn" />
    <string name="create_a_mnemonic_phrase_agreement" />
    <string name="create_a_mnemonic_phrase_description" />
    <string name="create_a_mnemonic_phrase_title" />
    <string name="creating_a_password_description" />
    <string name="creating_a_password_error_amount_of_characters" />
    <string name="creating_a_password_error_difference" />
    <string name="creating_a_password_titel" />
    <string name="delet_wallet_warning_cancel_btn" />
    <string name="delet_wallet_warning_confirml_btn" />
    <string name="delet_wallet_warning_description" />
    <string name="delet_wallet_warning_title" />
    <string name="faq_title" />
    <string name="import_mnemonics_description" />
    <string name="import_mnemonics_pop_up_sucsess_description" />
    <string name="import_mnemonics_pop_up_sucsess_title" />
    <string name="import_mnemonics_same_words_error" />
    <string name="import_mnemonics_title" />
    <string name="import_mnemonics_twelve_words_btn" />
    <string name="import_mnemonics_twenty_four_words_btn" />
    <string name="import_mnemonics_warning" />
    <string name="import_mnemonics_wrong_words_error" />
    <string name="import_tokens_label_add" />
    <string name="import_tokens_title" />
    <string name="incoming_outgoing" />
    <string name="lable_copied" />
    <string name="listing_request_blockchain" />
    <string name="listing_request_e_mail" />
    <string name="listing_request_name" />
    <string name="listing_request_project_description" />
    <string name="listing_request_project_name" />
    <string name="listing_request_title" />
    <string name="listing_request_twitter" />
    <string name="loading_pop_up_description" />
    <string name="loading_pop_up_title" />
    <string name="main_screen_addresses_btn" />
    <string name="main_screen_purse_add_wallet" />
    <string name="main_screen_purse_all_wallets" />
    <string name="main_screen_purse_btn" />
    <string name="main_screen_purse_import" />
    <string name="main_screen_recive_btn" />
    <string name="main_screen_send_btn" />
    <string name="main_screen_title_balance" />
    <string name="main_screen_title_purse" />
    <string name="main_screen_transaction_btn" />
    <string name="menu_all_settings" />
    <string name="menu_dark_theme" />
    <string name="menu_hide_wallet_balance_description" />
    <string name="menu_hide_wallet_balance_title" />
    <string name="menu_light_theme" />
    <string name="menu_notifications" />
    <string name="menu_push_notifications_description" />
    <string name="menu_push_notifications_title" />
    <string name="menu_support_description" />
    <string name="menu_support_title" />
    <string name="mnemonic_phrase_verification_description" />
    <string name="mnemonic_phrase_verification_error" />
    <string name="mnemonic_phrase_verification_pop_up_sucsess_title" />
    <string name="mnemonic_phrase_verification_task" />
    <string name="mnemonic_phrase_verification_title" />
    <string name="my_wallets_add_wallet" />
    <string name="my_wallets_label_added" />
    <string name="my_wallets_label_removed" />
    <string name="my_wallets_title" />
    <string name="network_description_btn" />
    <string name="next_btn" />
    <string name="no_connection_description">Check your internet connection and try again</string>
    <string name="no_connection_title">No connection</string>
    <string name="non_existent_adress_error" />
    <string name="notifications_all" />
    <string name="notifications_credited_to_chia_wallet" />
    <string name="notifications_credited_to_chives_wallet" />
    <string name="notifications_enrollments" />
    <string name="notifications_month" />
    <string name="notifications_other" />
    <string name="notifications_title" />
    <string name="notifications_today" />
    <string name="notifications_week" />
    <string name="notifications_withdrawn_from_chia_wallet" />
    <string name="notifications_withdrawn_from_chives_wallet" />
    <string name="notifications_write_off" />
    <string name="notifications_year" />
    <string name="notifications_yesterday" />
    <string name="passcode_confirmation_description" />
    <string name="passcode_confirmation_title" />
    <string name="passcode_entry_screen_error" />
    <string name="passcode_entry_screen_reset" />
    <string name="personal_data_agreement_chekbox" />
    <string name="pop_up_failed_create_a_mnemonic_phrase_title">Oops...</string>
    <string name="pop_up_failed_error_description">Something went wrong, please try again</string>
    <string name="pop_up_failed_error_return_btn" />
    <string name="pop_up_failed_error_title" />
    <string name="pop_up_failed_import_mnemonics_title" />
    <string name="pop_up_listing_request_description" />
    <string name="pop_up_sent_a_question_description" />
    <string name="pop_up_sent_title" />
    <string name="pop_up_wallet_removed_description" />
    <string name="pop_up_wallet_removed_title" />
    <string name="ready_btn" />
    <string name="receive_a_token_adress" />
    <string name="receive_a_token_copy" />
    <string name="reconnect_btn">Reconnect</string>
    <string name="return_btn">Return</string>
    <string name="screen_for_creating_a_new_wallet_description" />
    <string name="screen_for_creating_a_new_wallet_title" />
    <string name="search" />
    <string name="select_network" />
    <string name="send_token_add_address" />
    <string name="send_token_address_is_already_exist" />
    <string name="send_token_adress" />
    <string name="send_token_amount" />
    <string name="send_token_commission_amount" />
    <string name="send_token_commission_recommended" />
    <string name="send_token_insufficient_funds_error" />
    <string name="send_token_name_of_adres" />
    <string name="send_token_password_error" />
    <string name="send_token_pop_up_confirmation" />
    <string name="send_token_pop_up_succsess_description" />
    <string name="send_token_pop_up_succsess_title" />
    <string name="send_token_pop_up_transaction_fail_error_description" />
    <string name="send_token_pop_up_transaction_fail_error_title" />
    <string name="share_btn" />
    <string name="slow_connection_description" />
    <string name="slow_connection_title" />
    <string name="success" />
    <string name="support_FAQ" />
    <string name="support_about_app" />
    <string name="support_ask_a_question" />
    <string name="support_listing" />
    <string name="terms_of_use_text" />
    <string name="trms_of_use_title" />
    <string name="transaction_pop_up_info_title" />
    <string name="transactions_all" />
    <string name="transactions_incoming" />
    <string name="transactions_last_month" />
    <string name="transactions_last_week" />
    <string name="transactions_pendind" />
    <string name="transactions_title" />
    <string name="transactions_today" />
    <string name="wallet_delete_wallet_btn" />
    <string name="wallet_receive_description" />
    <string name="wallet_receive_title" />
    <string name="wallet_scan_address_description" />
    <string name="wallet_scan_address_title" />
    <string name="wallet_send_description" />
    <string name="wallet_send_title" />
    <string name="wallet_share_description" />
    <string name="wallet_share_title" />
    <string name="wallet_title" />
    <string name="wallet_transaction_history_btn" />
</resources>