<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/primary_app_background"
		android:scrollbars="none">

	<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

		<LinearLayout
				android:id="@+id/back_layout"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="10dp"
				android:layout_marginTop="10dp"
				android:foreground="?android:attr/selectableItemBackground"
				android:orientation="horizontal">

			<ImageView
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:layout_gravity="center_vertical"
					android:gravity="center_vertical"
					android:src="@drawable/back_arrow_ic" />

			<TextView
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:layout_gravity="center_vertical"
					android:text="@string/back_btn"
					android:textColor="@color/greey"
					android:textFontWeight="500"
					android:textSize="18sp" />

		</LinearLayout>

		<TextView
				android:id="@+id/txtWallet"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerHorizontal="true"
				android:layout_marginTop="8dp"
				android:gravity="center_horizontal"
				android:text="@string/wallet_title"
				android:textColor="@color/green"
				android:textSize="25sp"
				android:textStyle="bold" />

		<ScrollView
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_below="@+id/txtWallet"
				android:layout_marginTop="8dp"
				android:paddingBottom="70dp"
				android:scrollbars="none">

			<androidx.constraintlayout.widget.ConstraintLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical">


				<androidx.viewpager.widget.ViewPager
						android:id="@+id/manage_wallet_view_pager"
						android:layout_width="match_parent"
						android:layout_height="235dp"
						android:visibility="visible"
						app:layout_constraintEnd_toEndOf="parent"
						app:layout_constraintHorizontal_bias="0.0"
						app:layout_constraintStart_toStartOf="parent"
						app:layout_constraintTop_toTopOf="parent">

				</androidx.viewpager.widget.ViewPager>

				<com.rd.PageIndicatorView
						android:id="@+id/pageIndicator"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_gravity="center_horizontal"
						android:visibility="visible"
						app:layout_constraintEnd_toEndOf="parent"
						app:layout_constraintStart_toStartOf="parent"
						app:layout_constraintTop_toBottomOf="@id/manage_wallet_view_pager"
						app:piv_animationType="swap"
						app:piv_count="1"
						app:piv_radius="4dp"
						app:piv_selectedColor="@color/selected_dot_indicator"
						app:piv_unselectedColor="@color/unselected_dot_indicator" />

				<RelativeLayout
						android:id="@+id/relCopied"
						android:layout_width="0dp"
						android:layout_height="30dp"
						android:layout_marginStart="20dp"
						android:layout_marginEnd="20dp"
						android:layout_marginBottom="-10dp"
						android:background="@drawable/copied_bcg"
						android:visibility="gone"
						app:layout_constraintBottom_toTopOf="@+id/gridManageWallet"
						app:layout_constraintEnd_toEndOf="parent"
						app:layout_constraintHorizontal_bias="0.0"
						app:layout_constraintStart_toStartOf="parent">

					<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_centerVertical="true"
							android:layout_marginStart="15dp"
							android:text="@string/lable_copied"
							android:textColor="@color/btn_copy_txt_icon_color"
							android:textFontWeight="500" />

				</RelativeLayout>

				<GridLayout
						android:id="@+id/gridManageWallet"
						android:layout_width="match_parent"
						android:layout_height="360dp"
						android:columnCount="2"
						android:paddingStart="15dp"
						android:paddingTop="10dp"
						android:paddingEnd="15dp"
						android:paddingBottom="10dp"
						android:rowCount="2"
						android:visibility="visible"
						app:layout_constraintEnd_toEndOf="parent"
						app:layout_constraintStart_toStartOf="parent"
						app:layout_constraintTop_toBottomOf="@+id/pageIndicator">

					<androidx.constraintlayout.widget.ConstraintLayout
							android:id="@+id/linearSend"
							android:layout_width="0dp"
							android:layout_height="0dp"
							android:layout_rowWeight="1"
							android:layout_columnWeight="1"
							android:layout_margin="5dp"
							android:background="@drawable/bcg_managa_wallet_item"
							android:foreground="?android:attr/selectableItemBackground"
							android:orientation="vertical"
							android:padding="10dp">


						<ImageView
								android:id="@+id/imageView3"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:src="@drawable/manage_send"
								app:layout_constraintStart_toStartOf="parent"
								app:layout_constraintTop_toTopOf="parent" />

						<TextView
								android:id="@+id/textView6"
								android:layout_width="0dp"
								android:layout_height="20dp"
								android:layout_marginTop="3dp"
								android:autoSizeMaxTextSize="16sp"
								android:autoSizeTextType="uniform"
								android:lines="1"
								android:maxLines="1"
								android:text="@string/wallet_send_title"
								android:textColor="@color/green"
								app:layout_constraintEnd_toEndOf="parent"
								app:layout_constraintStart_toStartOf="parent"
								app:layout_constraintTop_toBottomOf="@+id/imageView3" />

						<TextView
								android:id="@+id/textView2"
								android:layout_width="0dp"
								android:layout_height="0dp"
								android:autoSizeTextType="uniform"
								android:text="@string/wallet_send_description"
								android:textColor="@color/greey"
								app:layout_constraintBottom_toBottomOf="parent"
								app:layout_constraintEnd_toEndOf="parent"
								app:layout_constraintStart_toStartOf="parent"
								app:layout_constraintTop_toBottomOf="@+id/textView6" />


					</androidx.constraintlayout.widget.ConstraintLayout>

					<androidx.constraintlayout.widget.ConstraintLayout
							android:id="@+id/linearReceive"
							android:layout_width="0dp"
							android:layout_height="0dp"
							android:layout_rowWeight="1"
							android:layout_columnWeight="1"
							android:layout_margin="5dp"
							android:background="@drawable/bcg_managa_wallet_item"
							android:foreground="?android:attr/selectableItemBackground"
							android:orientation="vertical"
							android:padding="10dp">


						<ImageView
								android:id="@+id/imageView4"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:src="@drawable/manage_receive"
								app:layout_constraintStart_toStartOf="parent"
								app:layout_constraintTop_toTopOf="parent" />

						<TextView
								android:id="@+id/textView10"
								android:layout_width="0dp"
								android:layout_height="20dp"
								android:layout_marginTop="3dp"
								android:autoSizeMaxTextSize="16sp"
								android:autoSizeTextType="uniform"
								android:lines="1"
								android:maxLines="1"
								android:text="@string/wallet_receive_title"
								android:textColor="@color/green"
								app:layout_constraintEnd_toEndOf="parent"
								app:layout_constraintStart_toStartOf="parent"
								app:layout_constraintTop_toBottomOf="@+id/imageView4" />

						<TextView
								android:id="@+id/textView9"
								android:layout_width="0dp"
								android:layout_height="0dp"
								android:autoSizeTextType="uniform"
								android:text="@string/wallet_receive_description"
								android:textColor="@color/greey"
								app:layout_constraintBottom_toBottomOf="parent"
								app:layout_constraintEnd_toEndOf="parent"
								app:layout_constraintStart_toStartOf="parent"
								app:layout_constraintTop_toBottomOf="@+id/textView10" />


					</androidx.constraintlayout.widget.ConstraintLayout>

					<androidx.constraintlayout.widget.ConstraintLayout
							android:id="@+id/linearShare"
							android:layout_width="0dp"
							android:layout_height="0dp"
							android:layout_rowWeight="1"
							android:layout_columnWeight="1"
							android:layout_margin="5dp"
							android:background="@drawable/bcg_managa_wallet_item"
							android:foreground="?android:attr/selectableItemBackground"
							android:orientation="vertical"
							android:padding="10dp">

						<ImageView
								android:id="@+id/imageView5"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:src="@drawable/manage_share"
								app:layout_constraintStart_toStartOf="parent"
								app:layout_constraintTop_toTopOf="parent" />

						<TextView
								android:id="@+id/textView12"
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:layout_marginTop="3dp"
								android:autoSizeMaxTextSize="16sp"
								android:autoSizeTextType="uniform"
								android:lines="1"
								android:maxLines="1"
								android:text="@string/wallet_share_title"
								android:textColor="@color/green"
								app:layout_constraintEnd_toEndOf="parent"
								app:layout_constraintStart_toStartOf="parent"
								app:layout_constraintTop_toBottomOf="@+id/imageView5" />

						<TextView
								android:id="@+id/textView13"
								android:layout_width="0dp"
								android:layout_height="0dp"
								android:autoSizeTextType="uniform"
								android:text="@string/wallet_share_description"
								android:textColor="@color/greey"
								app:layout_constraintBottom_toBottomOf="parent"
								app:layout_constraintEnd_toEndOf="parent"
								app:layout_constraintStart_toStartOf="parent"
								app:layout_constraintTop_toBottomOf="@+id/textView12" />


					</androidx.constraintlayout.widget.ConstraintLayout>

					<androidx.constraintlayout.widget.ConstraintLayout
							android:id="@+id/linearScan"
							android:layout_width="0dp"
							android:layout_height="0dp"
							android:layout_rowWeight="1"
							android:layout_columnWeight="1"
							android:layout_margin="5dp"
							android:background="@drawable/bcg_managa_wallet_item"
							android:foreground="?android:attr/selectableItemBackground"
							android:orientation="vertical"
							android:paddingStart="10dp"
							android:paddingTop="10dp"
							android:paddingEnd="10dp"
							android:paddingBottom="10dp">

						<ImageView
								android:id="@+id/imageView7"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:src="@drawable/manage_scan"
								app:layout_constraintStart_toStartOf="parent"
								app:layout_constraintTop_toTopOf="parent" />

						<TextView
								android:id="@+id/textView17"
								android:layout_width="0dp"
								android:layout_height="16sp"
								android:layout_marginTop="3dp"
								android:autoSizeMaxTextSize="16sp"
								android:autoSizeTextType="uniform"
								android:lines="1"
								android:maxLines="1"
								android:text="@string/wallet_scan_address_title"
								android:textColor="@color/green"
								app:layout_constraintEnd_toEndOf="parent"
								app:layout_constraintStart_toStartOf="parent"
								app:layout_constraintTop_toBottomOf="@+id/imageView7" />

						<TextView
								android:id="@+id/textView16"
								android:layout_width="0dp"
								android:layout_height="0dp"
								android:autoSizeTextType="uniform"
								android:text="@string/wallet_scan_address_description"
								android:textColor="@color/greey"
								android:textSize="12sp"
								app:layout_constraintBottom_toBottomOf="parent"
								app:layout_constraintEnd_toEndOf="parent"
								app:layout_constraintStart_toStartOf="parent"
								app:layout_constraintTop_toBottomOf="@+id/textView17" />

					</androidx.constraintlayout.widget.ConstraintLayout>

				</GridLayout>


				<com.google.android.material.button.MaterialButton
						android:id="@+id/btnStoryTransactions"
						style="@style/Widget.AppTheme.MaterialButton"
						android:layout_width="0dp"
						android:layout_height="60dp"
						android:layout_centerHorizontal="true"
						android:layout_marginStart="35dp"
						android:layout_marginEnd="35dp"
						android:background="@drawable/btn_background_draw"
						android:text="@string/wallet_transaction_history_btn"
						android:textAllCaps="false"
						android:textSize="15sp"
						app:layout_constraintEnd_toEndOf="parent"
						app:layout_constraintHorizontal_bias="0.0"
						app:layout_constraintStart_toStartOf="parent"
						app:layout_constraintTop_toBottomOf="@+id/gridManageWallet" />

				<TextView
						android:id="@+id/txtDeleteWallet"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginTop="10dp"
						android:layout_marginBottom="10dp"
						android:clickable="true"
						android:focusable="true"
						android:foreground="?android:attr/selectableItemBackground"
						android:text="@string/wallet_delete_wallet_btn"
						android:textColor="@color/red_mnemonic"
						android:textFontWeight="500"
						android:textSize="16sp"
						app:layout_constraintEnd_toEndOf="parent"
						app:layout_constraintStart_toStartOf="parent"
						app:layout_constraintTop_toBottomOf="@+id/btnStoryTransactions" />

			</androidx.constraintlayout.widget.ConstraintLayout>

		</ScrollView>


	</RelativeLayout>

</ScrollView>
