<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rootRelative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/cardView_background"
        android:gravity="center_vertical"
        android:paddingTop="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

		<ImageView
				android:id="@+id/img_ic_imported_success"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerHorizontal="true"
				android:src="@drawable/ic_warning_deletion" />

        <TextView
            android:id="@+id/txt_confirm_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_ic_imported_success"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:gravity="center_horizontal"
            android:text="@string/delet_wallet_warning_title"
            android:textColor="@color/red_mnemonic"
            android:textSize="23sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtConfirmDialogPhrase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_confirm_title"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:gravity="center_horizontal"
            android:text="@string/delet_wallet_warning_description"
            android:textColor="@color/please_wait_text_color"
            android:textFontWeight="500"
            android:textSize="17sp" />

		<androidx.appcompat.widget.AppCompatButton
				android:id="@+id/btnCancel"
				android:layout_width="match_parent"
				android:layout_height="55dp"
				android:layout_below="@+id/txtConfirmDialogPhrase"
				android:layout_marginStart="40dp"
				android:layout_marginTop="27dp"
				android:layout_marginEnd="40dp"
				android:background="@drawable/btn_bcg_cancel"
				android:text="@string/delet_wallet_warning_cancel_btn"
				android:textAllCaps="false"
				android:textColor="@color/white"
				android:textSize="15sp"
				app:layout_constraintBottom_toBottomOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnConfirm"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_below="@id/btnCancel"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/btn_confirm"
            android:text="@string/delet_wallet_warning_confirml_btn"
            android:textAllCaps="false"
            android:textColor="@color/red_mnemonic"
            android:textSize="15sp" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
